// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`submitMultipleOrders 1 succeeds 1 fails 1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [
        "work-of:idontexistBog",
      ],
      "ok": false,
      "status": "OK",
      "successfullyCreated": [
        "work-of:870970-basis:39074184Bog",
      ],
    },
  },
}
`;

exports[`submitMultipleOrders 2 succeed, we order physical periodica when no title, author or pagenumber is given 1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [],
      "ok": true,
      "status": "OK",
      "successfullyCreated": [
        "work-of:870970-basis:39074184Bog",
        "work-of:870970-basis:04978617Tidsskrift",
      ],
    },
  },
}
`;

exports[`submitMultipleOrders all orders fail: unknown pickupBranch 1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [
        "work-of:870970-basis:39074184Bog",
        "work-of:870970-basis:04978617Tidsskrift",
      ],
      "ok": false,
      "status": "UNKNOWN_PICKUPAGENCY",
      "successfullyCreated": [],
    },
  },
}
`;

exports[`submitMultipleOrders succeeds: digital article becomes physical order, if user doesnt have account at homeagency 1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [],
      "ok": true,
      "status": "OK",
      "successfullyCreated": [
        "work-of:870970-basis:39074184Bog",
        "work-of:870970-basis:04978617Tidsskrift",
      ],
    },
  },
}
`;

exports[`submitMultipleOrders succeeds: digital article becomes physical order, if users homeagency not subscriber of digital article service 1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [],
      "ok": true,
      "status": "OK",
      "successfullyCreated": [
        "work-of:870970-basis:39074184Bog",
        "work-of:870970-basis:04978617Tidsskrift",
      ],
    },
  },
}
`;

exports[`submitMultipleOrders succeeds: user orders a book, a digital article and a physical periodica 1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [],
      "ok": true,
      "status": "OK",
      "successfullyCreated": [
        "work-of:870970-basis:39074184Bog",
        "work-of:870970-basis:04978617Tidsskrift",
        "work-of:870970-basis:04978617Tidsskrift",
      ],
    },
  },
}
`;

exports[`submitMultipleOrders succeeds: user orders multiple books  1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [],
      "ok": true,
      "status": "OK",
      "successfullyCreated": [
        "work-of:870970-basis:39074184Bog",
        "work-of:870970-basis:62371455Bog",
      ],
    },
  },
}
`;

exports[`submitMultipleOrders succeeds: user orders multiple books and digital article 1`] = `
{
  "data": {
    "submitMultipleOrders": {
      "failedAtCreation": [],
      "ok": true,
      "status": "OK",
      "successfullyCreated": [
        "work-of:870970-basis:39074184Bog",
        "work-of:870970-basis:62371455Bog",
        "work-of:870970-basis:04978617Tidsskrift",
      ],
    },
  },
}
`;
